# CraftingInterpreters

./: .clang-format  .gitignore  readme.md
clox-pp/: CMakeLists.txt  callframe.cpp  callframe.h  chunk.cpp  chunk.h  closure.cpp  closure.h  common.h  compiler.cpp  compiler.h  default.nix  exception.cpp  exception.h  function.cpp  function.h  lexer.cpp  lexer.h  main.cpp  opcode.h  parser.cpp  parser.h  token.cpp  token.h  upvalue.cpp  upvalue.h  value.cpp  value.h  virtualmachine.cpp  virtualmachine.h
cpplox/: CMakeLists.txt  compile_commands.json  default.nix  environment.cpp  environment.h  expression.cpp  expression.h  expression_printer.cpp  expression_printer.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  loxcallable.h  loxclass.cpp  loxclass.h  loxfunction.cpp  loxfunction.h  loxinstance.cpp  loxinstance.h  main.cpp  main.h  parser.cpp  parser.h  resolver.cpp  resolver.h  return.cpp  return.h  runtimeerror.cpp  runtimeerror.h  scanner.cpp  scanner.h  statement.cpp  statement.h  token.cpp  token.h  token_type.h
hslox/: ChangeLog.md  hslox.cabal  package.yaml  shell.nix  stack.yaml
hslox/app/: Main.hs
hslox/src/: AST.hs  Compiler.hs  Instruction.hs  Instructions.hs  Interpreter.hs  Lexer.hs  Parser.hs  Types.hs  Util.hs  Value.hs
hslox/src/Data/Stack/: ST.hs
hslox/src/Interpreter/: Environment.hs  Error.hs  Function.hs  Native.hs
rclox/: Cargo.toml
rclox/src/: chunk.rs  compiler.rs  debug.rs  error.rs  instruction.rs  lexer.rs  lib.rs  main.rs  opcode.rs  value.rs  vm.rs
rclox/src/vm/: mod.rs  native.rs
rclox/tests/: assignment.rs  block.rs  bool.rs  comments.rs  expressions.rs  for.rs  function.rs  language_test.rs  lib.rs.off  macros.rs  nil.rs  number.rs  operator.rs  print.rs  variable.rs
rlox/: Cargo.toml  flake.nix  shell.nix
rlox/benches/: fib.rs
rlox/src/: chunk.rs  compiler.rs  debug.rs  error.rs  lexer.rs  lib.rs  main.rs  opcode.rs  parser.rs  value.rs  virtual_machine.rs
rlox/src/tests/: block.rs  bool.rs  closure.rs  comment.rs  expression.rs  for.rs  function.rs  if.rs  logical_operators.rs  mod.rs  nil.rs  number.rs  operator.rs  print.rs  variable.rs  while.rs
