[package]
name = "rlox"
version = "0.1.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
clap = { version = "3.2.20", features = ["derive"] }
once_cell = "1.14.0"
parking_lot = "0.12.1"
rustyline = "10.0.0"
string-interner = "0.14.0"
thiserror = "1.0.33"

[features]
